--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon">    
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Document</title>
+    <title>Hadi Portfilio</title>
 </head>
 <body>
     <section id="home">
@@ -14,6 +15,7 @@
             <div class="logo">
                 <h1>Hadi <span>Zidani</span></h1>
            </div>
+           
            <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -43,17 +45,17 @@
                 </div>
                 <div class="allserv">
                     <div class="serv">
-                        <a href="#"><i class="fa-solid fa-display"></i></a>
+                        <a href=""><i class="fa-solid fa-display"></i></a>
                         <h2><span>Front-end</span></h2>
                         <p>Interface programming in my mother tongue and a little framework, and we are good at programming interfaces</p>
                     </div>
                     <div class="serv">
-                        <a href="#"><i class="fa-solid fa-code"></i></a>
+                        <a href=""><i class="fa-solid fa-code"></i></a>
                         <h2><span>Back-end</span></h2>
                         <p>The back-end programming that I am not good at is in the stage of learning, developing and applying what I have learned</p>
                     </div>
                     <div class="serv">
-                        <a href="#"><i class="fa-solid fa-laptop-code"></i></a>
+                        <a href=""><i class="fa-solid fa-laptop-code"></i></a>
                         <h2><span>Full-Stack</span></h2>
                         <p>The overall programming of the page. I can only program from the interface side because I am not developed in the back-end side</p>
                     </div>
@@ -64,27 +66,27 @@
             <div class="title"><h1>My Skilles</h1></div>
             <div class="container">
                 <div class="skil">
-                    <a href="#"><i class="fa-brands fa-html5" style="color: #d48021;"></i></a>
+                    <a href="#skilles"><i class="fa-brands fa-html5" style="color: #d48021;"></i></a>
                     <h2>HTML</h2>
                 </div>
                 <div class="skil">
-                    <a href="#"><i class="fa-brands fa-css3-alt" style="color: blue;"></i></a>
+                    <a href="#skilles"><i class="fa-brands fa-css3-alt" style="color: blue;"></i></a>
                     <h2>CSS</h2>
                 </div>
                 <div class="skil">
-                    <a href="#"><i class="fa-brands fa-js" style="color: #FFD43B;"></i></a>
+                    <a href="#skilles"><i class="fa-brands fa-js" style="color: #FFD43B;"></i></a>
                     <h2>JAVA SCRIPT</h2>
                 </div>
                 <div class="skil">
-                    <a href="#"><i class="fa-solid fa-database" style="color: white;"></i></a>
+                    <a href="#skilles"><i class="fa-solid fa-database" style="color: white;"></i></a>
                     <h2>MY SQL</h2>
                 </div>
                 <div class="skil">
-                    <a href="#"><i class="fa-brands fa-php"></i></a>
+                    <a href="#skilles"><i class="fa-brands fa-php"></i></a>
                     <h2>PHP</h2>
                 </div>
                 <div class="skil">
-                    <a href="#"><i class="fa-brands fa-java" style="color: white;"></i></a>
+                    <a href="#skilles"><i class="fa-brands fa-java" style="color: white;"></i></a>
                     <h2>JAVA</h2>
                 </div>
                 
@@ -125,7 +127,7 @@
                 <h2>Address :</h2>
                 <h3 style="color: white;"><i class="fa-solid fa-location-dot"></i> Alger,Mesila,Sidi Aissa</h3>
                 <h3><i class="fa-solid fa-phone"></i><a href="tel:+213672488597" style="text-decoration: none ;color: #fff;"> 0672488597</a></h3>
-                <h3><i class="fa-solid fa-envelope"></i><a href="mailto:zidanihadi259@gmail.com"> zidanihadi259@gmail.com</a></h3>
+                <h3><i class="fa-solid fa-envelope"></i><a href="mailto:zidanihadi259@gmail.com">zidanihadi259@gmail.com</a></h3>
                 </div>
                 <div class="contact">
                     <div class="res fb">
